Module - 3/Ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app1
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app2
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app3
  type: NodePort
---
